Migration Capacitor 2 -> 3 (WIP)

--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "@angular/router": "^13.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@babel/helper-validator-option": "^7.12.17",
-    "@capacitor-community/sqlite": "^2.9.16",
-    "@capacitor/android": "^2.5.0",
-    "@capacitor/core": "^2.5.0",
-    "@capacitor/ios": "^2.5.0",
+    "@capacitor-community/sqlite": "^3.3.3",
+    "@capacitor/android": "^3.4.0",
+    "@capacitor/app": "^1.1.0",
+    "@capacitor/core": "^3.4.0",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/filesystem": "^1.1.0",
+    "@capacitor/ios": "^3.4.0",
+    "@capacitor/local-notifications": "^1.1.0",
+    "@capacitor/share": "^1.1.1",
     "@ionic-native/android-permissions": "^5.31.1",
     "@ionic-native/background-geolocation": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
@@ -46,6 +51,7 @@
     "@mauron85/cordova-plugin-background-geolocation": "git+https://github.com/noerw/cordova-plugin-background-geolocation.git#5ea76c8787fb5dd1b6a6f913901e0399978d14dc",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@robingenz/capacitor-background-task": "^1.0.1",
     "@turf/bbox": "^6.5.0",
     "@turf/buffer": "^6.5.0",
     "@turf/helpers": "^6.5.0",
@@ -53,7 +59,7 @@
     "@turf/transform-translate": "^6.5.0",
     "@types/moment": "^2.13.0",
     "apexcharts": "^3.30.0",
-    "capacitor-file-selector": "0.0.5",
+    "capacitor-file-select": "^1.0.2",
     "concaveman": "github:grassick/concaveman#patch-1",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-background-fetch": "^7.0.3",
@@ -78,7 +84,7 @@
     "@angular/compiler": "^13.2.0",
     "@angular/compiler-cli": "^13.2.0",
     "@angular/language-service": "^13.2.0",
-    "@capacitor/cli": "^2.5.0",
+    "@capacitor/cli": "^3.4.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@turf/distance": "^6.3.0",
     "@types/concaveman": "^1.1.3",
