--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "delay": "^5.0.0",
     "density-clustering": "^1.3.0",
     "es6-promise-plugin": "^4.2.2",
+    "file-system": "^2.2.2",
+    "fs": "^0.0.1-security",
     "gps-to-gpx": "^1.5.1",
     "haversine-distance": "^1.2.1",
     "leaflet": "^1.7.1",
